Coming up on a release, pairing down crap.
git-svn-id: file:///home/hornerj/SVN/datamap@382 f9728cb3-98fc-0310-9eeb-e30d6094db73

--- a/datamap/NAMESPACE
+++ b/datamap/NAMESPACE
@@ -1,2 +1,10 @@
-export(newMap,newMapper,install,uninstall,delete,mapAttach,mapCall,UnboundValue,mappers)
+export(newMap,newMapper,install,uninstall,mapAttach,Mappers)
+
+S3method("$",datamap)
+S3method("$<-",datamap)
+S3method(print,datamap)
+
+S3method(print,dataMapper)
+S3method(print,dataMappers)
+
 useDynLib(datamap)
