R CMD check passes all tests
git-svn-id: file:///home/hornerj/SVN/datamap@383 f9728cb3-98fc-0310-9eeb-e30d6094db73

--- a/datamap/DESCRIPTION
+++ b/datamap/DESCRIPTION
@@ -7,5 +7,6 @@ Author: Jeffrey Horner <jeffrey.horner@gmail.com>
 Maintainer: Jeffrey Horner <jeffrey.horner@gmail.com>
 Description: datamap utilizes variable bindings and objects of class
  "UserDefinedDatabase" to provide a simple mapping system to foreign objects.
+Depends: DBI
 License: GPL2
 LazyLoad: yes
